--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Calculate Square</title>
 
   <script>
-  function calculates(a, b) {
-    let s = parseFloat(a) * parseFloat(b);
+  function calculates(a) {
+    let s = parseFloat(a) * parseFloat(a);
     if (isNaN(s)) {
       s = "Не введены числа";
     }
@@ -24,11 +24,9 @@
 
 <body>
 <p>
-  Длина : <input type="text" name="a" id="a"><br>
-  Ширина: <input type="text" name="b" id="b"><br>
+  Сторона квадрата : <input type="text" name="a" id="a"><br>
   ....... <button onclick='document.getElementById("s").value =
-  calculates(document.getElementById("a").value,
-  document.getElementById("b").value)'>Вычислить площадь</button><br>
+  calculates(document.getElementById("a").value)'>Вычислить площадь</button><br>
   Площадь:<input type="text" name="s" id="s" disabled>
 </p>
 </body>
